--- a/app/views/shippings/_new.html.erb
+++ b/app/views/shippings/_new.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for [@order, @shipping] do |f| %>
+<%= f.input :address %>
 <%= f.input :first_name %>
 <%= f.input :last_name %>
 <%= f.input :city %>
