--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "components/index";
 @import "orders/index";
 @import "pages/index";
+@import "payments/index";
 @import "products/index";
 @import "users/index";
 
