--- a/app/views/payments/_order.html.erb
+++ b/app/views/payments/_order.html.erb
@@ -1,18 +1,39 @@
-<h2 class="font-weight-bold mb-1 pb-1 border-bottom">Resumen</h2>
-<% @order.cart.line_items.each do |d| %>
-<div>
-  <% d.product.photos.first(1).each do |photo| %>
-  <%= cl_image_tag photo.key %>
+<h2 class="font-weight-bold mb-1 pb-1 border-bottom h3">Resumen</h2>
+<div class="d-flex py-3 pb-1 border-bottom">
+  <% @order.cart.line_items.each do |line_item| %>
+  <div class="payment-image pr-3">
+    <% line_item.product.photos.first(1).each do |photo| %>
+    <%= cl_image_tag photo.key %>
+    <% end %>
+  </div>
+  <div class="d-flex flex-column">
+    <div class="mb-auto">
+      <h2 class="h5 font-weight-bold"><%= line_item.product.name %></h2>
+    </div>
+    <div>
+      <p>Talle: <%= line_item.variant&.size %></p>
+      <div class="d-flex justify-content-between">
+        <p>Cantidad: <%= line_item.quantity %></p>
+        <p><%= humanized_money_with_symbol(line_item.variant.price) %></p>
+      </div>
+    </div>
+  </div>
   <% end %>
 </div>
-<div>
-  <p><strong>Producto:</strong> <%= d.product.name %></p>
-  <p><strong>Talle:</strong> <%= d.variant&.size %></p>
-  <p><strong>Cantidad:</strong> <%= d.quantity %></p>
+<div class="py-3 border-bottom">
+  <div class="d-flex justify-content-between">
+    <p class="mb-1">Subtotal</p>
+    <p class="mb-1"><%= humanized_money_with_symbol(@order.amount) %></p>
+  </div>
+  <div class="d-flex justify-content-between">
+    <p class="mb-0">Envio</p>
+    <p class="mb-0"><%= @order&.shipping&.amount %> </p>
+  </div>
 </div>
-<% end %>
-<p>Envio: <%= @order&.shipping&.amount %> </p>
-<p><strong>TOTAL:</strong><%= humanized_money_with_symbol(@order.amount) %></p>
+<div class="d-flex justify-content-between py-3">
+  <h3 class="mb-0 h4 font-weight-bold text-dark">TOTAL</h3>
+  <h3 class="mb-0 h4 font-weight-bold text-dark"><%= humanized_money_with_symbol(@order.total) %></h3>
+</div>
 <form action="/procesar-pago" method="post" data-controller="authenticity-token">
   <%= hidden_field_tag :authenticity_token %>
   <input type="hidden" name='order_id' value=<%= @order.id %>>
