--- a/app/views/shippings/_new.html.erb
+++ b/app/views/shippings/_new.html.erb
@@ -1,10 +1,24 @@
 <%= simple_form_for [@order, @shipping] do |f| %>
+<div class="row">
+  <div class="col">
+    <%= f.input :first_name %>
+  </div>
+  <div class="col">
+    <%= f.input :last_name %>
+  </div>
+</div>
 <%= f.input :address %>
-<%= f.input :first_name %>
-<%= f.input :last_name %>
-<%= f.input :city %>
-<%= f.input :state %>
-<%= f.input :amount %>
+<div class="row">
+  <div class="col-5">
+    <%= f.input :state %>
+  </div>
+   <div class="col-3">
+    <%= f.input :amount %>
+  </div>
+  <div class="col-4">
+    <%= f.input :city %>
+  </div>
+</div>
 <%= f.submit %>
 <% end %>
 
