--- a/app/views/payments/_shipping.html.erb
+++ b/app/views/payments/_shipping.html.erb
@@ -16,21 +16,21 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-5">
+    <div class="col-7 col-md-5">
       <h3>Provincia</h3>
       <div class="shipping-content">
         <p><%= @order.shipping.state %></p>
         <i class="far fa-check-square"></i>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-5 col-md-3">
       <h3>Codigo Postal</h3>
       <div class="shipping-content">
         <p>4107</p>
         <i class="far fa-check-square"></i>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col col-md-4">
       <h3>Ciudad</h3>
       <div class="shipping-content">
         <p><%= @order.shipping.city %></p>
@@ -38,10 +38,14 @@
       </div>
     </div>
   </div>
-  <h3>Direccion</h3>
-  <div class="shipping-content">
-    <p><%= @order.shipping.address %></p>
-    <i class="far fa-check-square"></i>
+  <div class="row">
+    <div class="col">
+      <h3>Direccion</h3>
+      <div class="shipping-content">
+        <p><%= @order.shipping.address %></p>
+        <i class="far fa-check-square"></i>
+      </div>
+    </div>
   </div>
   <div class="row">
     <div class="col">
@@ -61,7 +65,7 @@
   </div>
   <div class="row">
     <div class="col-4">
-      <h3>Codigo de area</h3>
+      <h3>Cód. Área</h3>
       <div class="shipping-content">
         <p>381</p>
         <i class="far fa-check-square"></i>
@@ -75,5 +79,5 @@
       </div>
     </div>
   </div>
-  <p class="py-2"><%= link_to 'editar', edit_shipping_path(@order.shipping.id), class: "badge badge-primary"%></p>
+  <h4 class="py-3"><%= link_to 'editar envio', edit_shipping_path(@order.shipping.id), class: "badge badge-primary"%></h4>
 </div>
