--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container d-md-flex justify-content-between pt-5 mt-5">
+<div class="container d-md-flex justify-content-between pt-5 mt-5 mb-5 pb-5">
   <div class="shipping-form flex-grow-1 pr-md-5">
     <h2 class="font-weight-bold mb-3 pb-1 h3">Envio</h2>
     <% unless @order&.shipping&.valid? %>
@@ -9,7 +9,7 @@
   </div>
   <div class="payment-container">
     <h2 class="font-weight-bold mb-1 pb-1 border-bottom h3">Resumen</h2>
-    <div class=" pb-1 border-bottom">
+    <div class="pb-1 border-bottom">
       <% @order.cart.line_items.each do |line_item| %>
       <div class="d-flex py-3">
         <div class="payment-image pr-3">
@@ -56,7 +56,3 @@
     <% end %>
   </div>
 </div>
-
-
-
-
