--- a/app/views/shippings/_new.html.erb
+++ b/app/views/shippings/_new.html.erb
@@ -30,23 +30,27 @@
   </div>
 </div>
 <div class="row">
-  <div class="col">
+  <div class="col-6">
     <h3>Numero</h3>
-    <p>600</p>
+    <%= f.input :number, label: false %>
   </div>
-  <div class="col">
+  <div class="col-3">
     <h3>Piso</h3>
-    <p>5a</p>
+    <%= f.input :floor, label: false %>
+  </div>
+  <div class="col-3">
+    <h3>Depto</h3>
+    <%= f.input :building, label: false %>
   </div>
 </div>
 <div class="row">
   <div class="col-4">
     <h3>Cód. Área</h3>
-    <p>381</p>
+    <%= f.input :area_code, label: false %>
   </div>
   <div class="col-8">
     <h3>Telefono</h3>
-    <p>155873403</p>
+    <%= f.input :phone, label: false %>
   </div>
 </div>
 <h3>Costo de envio</h3>
@@ -56,3 +60,8 @@
   <p class="order-1 pt-2 pt-md-0">*Al hacer click en Continuar estás aceptando estos Términos y condiciones</p>
 </div>
 <% end %>
+
+
+add_column :shippings, :dni, :string
+add_column :shippings, :building, :string
+
