Finish shipping new

--- a/app/assets/stylesheets/payments/_new.scss
+++ b/app/assets/stylesheets/payments/_new.scss
@@ -74,12 +74,22 @@
       padding-left: 8px ;
     }
 
+    .col-6 {
+      padding-right: 8px ;
+      padding-left: 8px ;
+    }
+
     .col-5 {
       padding-right: 8px ;
       padding-left: 8px ;
     }
 
     .col-4 {
+      padding-right: 8px ;
+      padding-left: 8px ;
+    }
+
+    .col-3 {
       padding-right: 8px ;
       padding-left: 8px ;
     }
