--- a/app/views/payments/_shipping.html.erb
+++ b/app/views/payments/_shipping.html.erb
@@ -83,14 +83,14 @@
     <div class="col-4">
       <h3>Cód. Área</h3>
       <div class="shipping-content">
-        <p>381</p>
+        <p><%= @order.shipping.area_code %></p>
         <i class="far fa-check-square"></i>
       </div>
     </div>
     <div class="col-8">
       <h3>Telefono</h3>
       <div class="shipping-content">
-        <p>155873403</p>
+        <p><%= @order.shipping.phone %></p>
         <i class="far fa-check-square"></i>
       </div>
     </div>
