--- a/app/views/shippings/edit.html.erb
+++ b/app/views/shippings/edit.html.erb
@@ -1,8 +1,70 @@
-<%= simple_form_for @shipping do |f| %>
-<%= f.input :first_name %>
-<%= f.input :last_name %>
-<%= f.input :city %>
-<%= f.input :state %>
-<%= f.input :amount %>
-<%= f.submit %>
-<% end %>
+<h2 class="pt-5 mt-5 text-center">Editar Envio</h2>
+<div class="container shipping-form mt-3 bg-white p-5 mb-5">
+  <%= simple_form_for @shipping do |f| %>
+  <div class="row">
+    <div class="col">
+      <h3>Nombre</h3>
+      <%= f.input :first_name, label: false %>
+    </div>
+    <div class="col">
+      <h3>Apellido</h3>
+      <%= f.input :last_name, label: false %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <h3>DNI</h3>
+      <%= f.input :dni, label: false %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-7 col-md-5">
+      <h3>Provincia</h3>
+      <%= f.input :state, label: false %>
+    </div>
+    <div class="col-5 col-md-3">
+      <h3>Codigo Postal</h3>
+      <%= f.input :postal_code, label: false %>
+    </div>
+    <div class="col col-md-4">
+      <h3>Ciudad</h3>
+      <%= f.input :city, label: false %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <h3>Direccion</h3>
+      <%= f.input :address, label: false %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-6">
+      <h3>Numero</h3>
+      <%= f.input :number, label: false %>
+    </div>
+    <div class="col-3">
+      <h3>Piso</h3>
+      <%= f.input :floor, label: false %>
+    </div>
+    <div class="col-3">
+      <h3>Depto</h3>
+      <%= f.input :building, label: false %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-4">
+      <h3>Cód. Área</h3>
+      <%= f.input :area_code, label: false %>
+    </div>
+    <div class="col-8">
+      <h3>Telefono</h3>
+      <%= f.input :phone, label: false %>
+    </div>
+  </div>
+  <h3>Costo de envio</h3>
+  <%= f.input :amount, label: false %>
+  <div class="d-md-flex justify-content-between">
+    <%= f.submit 'Continuar', class: 'btn btn-dark btn-block' %>
+  </div>
+  <% end %>
+</div>
