--- a/app/assets/stylesheets/payments/_new.scss
+++ b/app/assets/stylesheets/payments/_new.scss
@@ -1,3 +1,8 @@
+#payment-wrapper {
+  display: grid;
+  grid-template-columns: 60% 1fr;
+  grid-gap: 16px;
+}
 .payment-image {
   img {
     width: 100px;
