--- a/app/views/shippings/_new.html.erb
+++ b/app/views/shippings/_new.html.erb
@@ -1,4 +1,12 @@
+<h2 class="font-weight-bold mb-3 pb-1 h3">1.Envío</h2>
 <%= simple_form_for [@order, @shipping] do |f| %>
+<% if @order.amount.to_i > 4000 %>
+Envio Gratis
+<%= f.input :amount, collection: [[ 'Gratis', 'local']], selected: 'local' %>
+<% else %>
+<%= f.input :amount, collection: [['Envio a Caba y San Nicolas - $500', 'caba'], ['Envios al resto del pais - $600', 'address'],['Retiro por el local - $0', 'local']], selected: 'caba', label: false %>
+<% end %>
+<h2 class="py-3 h3 font-weight-bold">2.Datos personales</h2>
 <div class="row">
   <div class="col">
     <h3>Nombre</h3>
@@ -60,12 +68,7 @@
   </div>
 </div>
 <h3>Costo de envio</h3>
-<% if @order.amount.to_i > 4000 %>
-Envio Gratis
-<%= f.input :amount, collection: [[ 'Gratis', 'local']], selected: 'local' %>
-<% else %>
-<%= f.input :amount, collection: [['caba', 'Envio a Caba y San Nicolas - $500'], ['address', 'Envios al resto del pais - $600'],['local', 'Retiro por el local - $0']], label: false %>
-<% end %>
+
 <div class="d-md-flex justify-content-between">
   <%= f.submit 'Continuar', class: 'btn btn-dark btn-block ml-md-5 py-3 order-2' %>
   <p class="order-1 pt-2 pt-md-0">*Al hacer click en Continuar estás aceptando estos Términos y condiciones</p>
