--- a/app/assets/stylesheets/payments/_new.scss
+++ b/app/assets/stylesheets/payments/_new.scss
@@ -22,8 +22,8 @@
 .shipping-form {
   h3 {
     margin-top: 0px;
-    margin-bottom: 6px;
-    font-size: 18px;
+    margin-bottom: 3px;
+    font-size: 16px;
     font-weight: bold;
   }
   p {
@@ -57,6 +57,12 @@
 
   h4 {
     font-size: 17px;
+  }
+}
+
+@media(max-width: 991.98px) {
+  #payment-wrapper {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -109,9 +115,6 @@
   }
 
   .shipping-form {
-    h2 {
-      text-align: center;
-    }
 
     p {
       font-size: 10px;
