--- a/app/views/shippings/_new.html.erb
+++ b/app/views/shippings/_new.html.erb
@@ -2,9 +2,17 @@
 <%= simple_form_for [@order, @shipping] do |f| %>
 <% if @order.amount.to_i > 4000 %>
 Envio Gratis
-<%= f.input :amount, collection: [[ 'Gratis', 'local']], selected: 'local' %>
+<div class="row">
+  <div class="col">
+    <%= f.input :amount, collection: [[ 'Gratis', 'local']], selected: 'local' %>
+  </div>
+</div>
 <% else %>
-<%= f.input :amount, collection: [['Envio a Caba y San Nicolas - $500', 'caba'], ['Envios al resto del pais - $600', 'address'],['Retiro por el local - $0', 'local']], selected: 'caba', label: false %>
+<div class="row">
+  <div class="col">
+    <%= f.input :amount, collection: [['Envio a Caba y San Nicolas - $500', 'caba'], ['Envios al resto del pais - $600', 'address'],['Retiro por el local - $0', 'local']], selected: 'caba', label: false %>
+  </div>
+</div>
 <% end %>
 <h2 class="py-3 h3 font-weight-bold">2.Datos personales</h2>
 <div class="row">
@@ -67,10 +75,8 @@ Envio Gratis
     <%= f.input :phone, label: false %>
   </div>
 </div>
-<h3>Costo de envio</h3>
-
-<div class="d-md-flex justify-content-between">
-  <%= f.submit 'Continuar', class: 'btn btn-dark btn-block ml-md-5 py-3 order-2' %>
-  <p class="order-1 pt-2 pt-md-0">*Al hacer click en Continuar estás aceptando estos Términos y condiciones</p>
+<div class="d-md-flex justify-content-between pt-4">
+  <%= f.submit 'Continuar', class: 'btn btn-dark btn-block ml-md-5 py-2 order-2' %>
+  <p class="order-1 pt-2 pt-md-0 text-secondary">*Al hacer click en Continuar estás aceptando estos Términos y condiciones</p>
 </div>
 <% end %>
