--- a/app/views/shippings/_new.html.erb
+++ b/app/views/shippings/_new.html.erb
@@ -75,7 +75,7 @@
   </div>
 </div>
 <div class="d-md-flex justify-content-between pt-4">
-  <%= f.submit 'Continuar', class: 'btn btn-dark btn-block ml-md-5 py-2 order-2' %>
+  <%= f.submit 'Continuar', class: 'btn btn-dark ml-md-5 py-2 order-2', id: 'btn-shipping' %>
   <p class="order-1 pt-2 pt-md-0 text-secondary">*Al hacer click en Continuar estás aceptando estos Términos y condiciones</p>
 </div>
 <% end %>
