Finish shipping style

--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -38,7 +38,7 @@
       </div>
       <div class="d-flex justify-content-between">
         <p class="mb-0">Envio</p>
-        <p class="mb-0"><%= @order.total.to_i - @order.amount.to_i  %></p>
+        <p class="mb-0">$<%= @order.total.to_i - @order.amount.to_i  %></p>
       </div>
     </div>
     <div class="d-flex justify-content-between py-3">
