--- a/app/views/shippings/_new.html.erb
+++ b/app/views/shippings/_new.html.erb
@@ -36,7 +36,7 @@
     <%= f.input :state, label: false %>
   </div>
   <div class="col-5 col-md-3">
-    <h3>Codigo Postal</h3>
+    <h3>Código Postal</h3>
     <%= f.input :postal_code, label: false, as: :numeric %>
   </div>
   <div class="col col-md-4">
@@ -46,13 +46,13 @@
 </div>
 <div class="row">
   <div class="col">
-    <h3>Direccion</h3>
+    <h3>Dirección</h3>
     <%= f.input :address, label: false %>
   </div>
 </div>
 <div class="row">
   <div class="col-6">
-    <h3>Numero</h3>
+    <h3>Número</h3>
     <%= f.input :number, label: false, as: :numeric %>
   </div>
   <div class="col-3">
@@ -70,7 +70,7 @@
     <%= f.input :area_code, label: false, as: :numeric %>
   </div>
   <div class="col-8">
-    <h3>Telefono</h3>
+    <h3>Teléfono</h3>
     <%= f.input :phone, label: false, as: :numeric %>
   </div>
 </div>
