--- a/app/views/users/_admin_menu.html.erb
+++ b/app/views/users/_admin_menu.html.erb
@@ -12,6 +12,8 @@
     <%= link_to 'Ver Usuarios', users_path, class: 'btn btn-primary btn-lg btn-block' %>
     <hr>
     <%= link_to 'Ver Ordenes', orders_path, class: 'btn btn-success btn-lg btn-block' %>
+    <%= link_to 'Ver Pagos', payments_path, class: 'btn btn-success btn-lg btn-block' %>
+
     <hr>
     <h2 class="text-center h5 pt-3 pb-3 font-weight-bold">Mayorista</h2>
     <%= link_to 'Crear categorias', new_division_path, class: 'btn btn-dark btn-lg btn-block' %>
