Finish payment model

--- a/app/views/payments/_shipping.html.erb
+++ b/app/views/payments/_shipping.html.erb
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="col-5 col-md-3">
-      <h3>Codigo Postal</h3>
+      <h3>Código Postal</h3>
       <div class="shipping-content">
         <p><%= @order.shipping.postal_code %> </p>
         <i class="far fa-check-square"></i>
@@ -49,7 +49,7 @@
   </div>
   <div class="row">
     <div class="col">
-      <h3>Direccion</h3>
+      <h3>Dirección</h3>
       <div class="shipping-content">
         <p><%= @order.shipping.address %></p>
         <i class="far fa-check-square"></i>
@@ -58,7 +58,7 @@
   </div>
   <div class="row">
     <div class="col-6">
-      <h3>Numero</h3>
+      <h3>Número</h3>
       <div class="shipping-content">
         <p><%= @order&.shipping&.number %></p>
         <i class="far fa-check-square"></i>
@@ -88,7 +88,7 @@
       </div>
     </div>
     <div class="col-8">
-      <h3>Telefono</h3>
+      <h3>Télefono</h3>
       <div class="shipping-content">
         <p><%= @order.shipping.phone %></p>
         <i class="far fa-check-square"></i>
