Add some style to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,4 +19,13 @@
     <%= render 'shared/product_card', product: product %>
     <% end %>
   </div>
+  <h2 class="pt-5 text-center pb-5">Categorias</h2>
+  <div id="card-category-grid">
+    <% @categories.each do |category| %>
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= category.photo %>)">
+      <%= category.name %>
+    </div>
+    <% end %>
+  </div>
+  <%= render 'social_media' %>
 </div>
