--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,2 +1,22 @@
 // Specific CSS for your home-page
+#social-media-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 0px;
+  img {
+    width: 150px;
+    height: 150px;
+  }
+}
+#card-category-grid{
+  display: grid;
+  grid-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-bottom: 80px;
+}
 
+@media(max-width: 575px){
+  #card-category-grid{
+    grid-template-columns: 1fr;
+  }
+}
