--- a/app/views/pages/_social_media.html.erb
+++ b/app/views/pages/_social_media.html.erb
@@ -1,4 +1,5 @@
-<h2 class="pt-5 text-center pb-5">Categorias</h2>
+<h2 class="pt-5 text-center">Instagram</h2>
+<p class="text-center pb-5">Seguinos en @cottonhome</p>
 <div id="social-media-grid">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176396/Cotton_Home_-_Web-9_dxgomc.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176395/Cotton_Home_-_Web-4_bmlybm.jpg" alt="">
@@ -9,4 +10,5 @@
    <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176396/Cotton_Home_-_Web-9_dxgomc.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176395/Cotton_Home_-_Web-4_bmlybm.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176395/Cotton_Home_-_Web-3_ncd4bf.jpg" alt="">
+  <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176396/Cotton_Home_-_Web-9_dxgomc.jpg" alt="">
 </div>
