--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -10,6 +10,7 @@
   &:hover {
     box-shadow: 1px 1px 10px lightgrey;
   }
+
 }
 
 .card-category {
@@ -30,6 +31,12 @@
     img {
       height: 203px;
       object-fit: cover;
+    }
+  }
+
+  .card-body {
+    h5 {
+      font-size: 16px !important;
     }
   }
 }
