--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -23,7 +23,7 @@
     color: black !important;
     font-size: 17px;
     &:hover {
-      color: lightgrey !important;
+      text-decoration: underline
     }
 
   }
