--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,12 @@
 // Specific CSS for your home-page
 #social-media-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 0px;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 5px;
+  padding: 5px;
   img {
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: 340px;
   }
 }
 #card-category-grid{
