--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -41,3 +41,12 @@
     grid-template-columns: 1fr;
   }
 }
+
+
+@media(max-width: 575px) {
+  .product-image {
+    img {
+      height: 500px;
+    }
+  }
+}
