Fix social container

--- a/app/views/pages/_social_media.html.erb
+++ b/app/views/pages/_social_media.html.erb
@@ -10,5 +10,5 @@
    <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176396/Cotton_Home_-_Web-9_dxgomc.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176395/Cotton_Home_-_Web-4_bmlybm.jpg" alt="">
   <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176395/Cotton_Home_-_Web-3_ncd4bf.jpg" alt="">
-  <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176396/Cotton_Home_-_Web-9_dxgomc.jpg" alt="">
+  <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614176396/Cotton_Home_-_Web-9_dxgomc.jpg" alt="" class="d-none d-lg-block">
 </div>
