--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,7 @@
   img {
     width: 100%;
     height: 340px;
+    object-fit: cover;
   }
 }
 #card-category-grid{
@@ -16,8 +17,31 @@
   margin-bottom: 80px;
 }
 
+@media (max-width: 1199.98px) {
+  #social-media-grid {
+    img {
+      height: 280px;
+    }
+  }
+}
+
+@media (max-width: 991.98px) {
+  #social-media-grid {
+    grid-template-columns: repeat(3, 1fr);
+    img {
+      height: 320px;
+    }
+  }
+}
+
 @media(max-width: 575px){
   #card-category-grid{
     grid-template-columns: 1fr;
+  }
+
+  #social-media-grid {
+    img {
+      height: 150px;
+    }
   }
 }
