--- a/app/assets/stylesheets/pages/_home_cards.scss
+++ b/app/assets/stylesheets/pages/_home_cards.scss
@@ -59,7 +59,7 @@
 
 .products-home-cards {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 32px;
 }
 
@@ -92,9 +92,9 @@
   }
 
   .products-home-cards {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 32px;
-}
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 32px;
+  }
 
 }
