Finish user sing_up

--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,20 +1,20 @@
 <div class="pl-0 pl-md-4">
   <h2 class="font-weight-bold h3 pb-4">TUS DATOS</h2>
-  <h2 class="h5 font-weight-bold mb-1">Nombre legal</h2>
-  <p><%= @user.name %></p>
+  <h2 class="h5 font-weight-bold mb-1">Nombre</h2>
+  <p><%= @user.shipping&.full_name %></p>
   <h2 class="h5 font-weight-bold mb-1">Teléfono</h2>
-  <p><%= @user.phone %></p>
-  <h2 class="h5 font-weight-bold mb-1">Dirección</h2>
-  <p><%= @user.address %></p>
+  <p><%= @user.shipping&.full_number %></p>
   <h2 class="h5 font-weight-bold mb-1">Codigo Postal</h2>
-  <p><%= @user.zip_code %></p>
+  <p><%= @user.shipping&.postal_code %></p>
   <h2 class="h5 font-weight-bold mb-1">Ciudad</h2>
-  <p><%= @user.city %></p>
+  <p><%= @user.shipping&.city %></p>
   <h2 class="h5 font-weight-bold mb-1">Provincia</h2>
-  <p><%= @user.state %></p>
+  <p><%= @user.shipping&.state %></p>
+  <h2 class="h5 font-weight-bold mb-1">Dirección</h2>
+  <p><%= @user.shipping&.address %></p>
+  <p><strong>Numero:</strong> <%= @user.shipping&.number %></p>
+  <p><strong>Piso:</strong> <%= @user.shipping&.floor %></p>
+  <p><strong>Depto:</strong> <%= @user.shipping&.building %></p>
   <h2 class="h5 font-weight-bold mb-1">Dirección de correo electrónico</h2>
-  <p><%= @user.email %></p>
-  <div class="pt-3 pb-5">
-   <%= link_to 'Editar Perfil', edit_user_registration_path, class: "btn btn-dark btn-lg btn-block" %>
- </div>
+  <p class="mb-5"><%= @user.email %></p>
 </div>
