Footer in progress

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,18 @@
 <div class="bg-secondary" id="footer">
+ <h2 class="text-center">Suscribite al newsletter</h2>
+ <form action="">
+   <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Enter email">
+  </div>
+ </form>
+  <h2>Seguinos en:</h2>
   <div class="d-flex align-items-center justify-content-center py-4">
     <%= link_to "#", target: "_blank" do  %>
-      <i class="fab fa-facebook-square h1 mr-3"></i>
+      <i class="fab fa-facebook-f h2 mr-3"></i>
     <% end %>
     <%= link_to "#", target: "_blank" do %>
-      <i class="fab fa-instagram-square h1 mr-3"></i>
+      <i class="fab fa-instagram h1 mr-3"></i>
     <% end %>
     <i class="fab fa-whatsapp-square h1"></i>
   </div>
