--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,7 +21,8 @@
   }
   .nav-link {
     color: black !important;
-    font-size: 17px;
+    font-size: 16px;
+    font-weight: 500;
     &:hover {
       text-decoration: underline
     }
