--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,14 +9,20 @@
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     font-size: 54px;
     font-weight: bold;
+    margin-bottom: 16px;
+  }
+
+  p {
+    margin-bottom: 4px;
+    font-size: 16px;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
 
   a {
-    font-size: 15px;
-    color: white;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    text-decoration: none;
     &:hover {
-      text-decoration: none;
+      color: grey;
     }
   }
 }
