--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,3 +1,11 @@
+.home-button {
+  background: transparent;
+  border: 1px solid white;
+  padding: 10px 20px;
+  font-size: 15px;
+  color: white;
+}
+
 .mercadopago-button {
   width: 100%;
   background: black;
