--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,10 @@
-<div class="banner d-flex align-items-end" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1578683010236-d716f9a3f461?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
-  <div class="container text-center pb-5">
-    <h1>Nueva Colección</h1>
-    <a href="#home-cards">Muchos productos nuevos...</a>
+<div class="banner d-flex align-items-center" style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1578683010236-d716f9a3f461?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+  <div class="container text-center">
+    <p>EN TIENDAS & ONLINE</p>
+    <h1>Descubrí Nuestras Sabanas</h1>
+    <% @sub_categories.where(name: "Sabanas").each do |sub_category| %>
+    <%= link_to 'Explorar colección', sub_category_path(sub_category), class: 'home-button px-5' %>
+    <% end %>
   </div>
 </div>
 <section id="home-cards">
