--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -20,7 +20,7 @@
     <% end %>
   </div>
   <div class="container pb-1 text-center d-md-flex justify-content-between align-items-end">
-    <h4 class="font-weight-bold"> Ayuda - Terminos y condiciones - Como comprar</h4>
+    <h4> Ayuda - Terminos y condiciones - Como comprar</h4>
     <div>
       <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_408/v1614297740/visa-blue-gradient-800x450_bd2v5n.jpg" alt="visa-logo" id="payment-cards">
       <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1614297947/mc_acc_opt_70_3x_9_zcuttp.png" alt="master-card" id="payment-cards">
