Change order controller

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -19,7 +19,12 @@
     </div>
     <% end %>
     <div class="order-show-footer">
-      <p>Estado:<strong> <%= @order.state %> <i class="far fa-check-circle"></i></p></strong>
+      <% if @order.payment.payment_status == 'approved' %>
+        <p>Estado:<strong> Aprovado<i class="far fa-check-circle"></i></p></strong>
+      <% else %>
+        <p>Estado:<strong> <span class="text-warning">Pendiente</span></p></strong>
+        <p style="font-size: 12px; margin-bottom: 6px;"><strong>*nos comunicaremos con vos cuando el pago este aprovado</strong></p>
+      <% end %>
       <p>Total: <%= humanized_money_with_symbol(@order.amount) %></p>
     </div>
     <div class="order-show-button pb-3">
