--- a/app/views/order_mailer/new_payment_pending.html.erb
+++ b/app/views/order_mailer/new_payment_pending.html.erb
@@ -12,5 +12,5 @@ Detalle de la orden<br>
 <p><strong>Producto: </strong><%= line_item.product.name %></p>
 <p><strong>Cantidad: </strong><%= line_item.quantity %></p>
 
-
+<p><strong> *El estado del pago esta pendiente, te enviaremos otro mail cuando el pago este confirmado, muchas gracias</strong></p>
 <% end %>
