--- a/app/views/products/_modal.html.erb
+++ b/app/views/products/_modal.html.erb
@@ -8,14 +8,14 @@
         </button>
       </div>
       <div class="modal-body text-left">
-        <h3 class="bg-dark text-white h5 py-2 px-1 font-weight-bold text-center">Cuna</h3>
-        <p>Para colchón de hasta 0.60 m de ancho x 1.20 m de largo x 0.20 m de alto.</p>
+        <h3 class="bg-dark text-white h5 py-2 px-1 font-weight-bold text-center">1 Plaza</h3>
+        <p>Para colchón de hasta 0,90 mts de ancho X 1.90 mts de largo X 0.35 mts de alto.</p>
         <h3 class="bg-dark text-white h5 py-2 px-1 font-weight-bold text-center">Twin Size</h3>
-        <p>Para colchón de hasta 1 m de ancho x 2 m de largo x 0.25 m de alto.</p>
+        <p>Para colchón de hasta 1 m de ancho X 1.90 mts de largo X 0.35 metros de alto.</p>
         <h3 class="bg-dark text-white h5 py-2 px-1 font-weight-bold text-center">Queen Size</h3>
-        <p>Para colchón de hasta 1.50 m de ancho x 1.90 m de largo x 0.25 m de alto.</p>
+        <p>Para colchón de hasta 1.60 mts de ancho X 1.90 mts de largo X 0.35 metros de alto.</p>
         <h3 class="bg-dark text-white h5 py-2 px-1 font-weight-bold text-center">King Size</h3>
-        <p>Para colchón de hasta 2 m de ancho x 2 m de largo x 0.35 m de alto</p>
+        <p>Para colchón de hasta 2 mts de ancho X 2 mts de largo X 0.35 metros de alto</p>
       </div>
     </div>
   </div>
