--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -26,7 +26,7 @@
       <p><strong>PRECIO:</strong> <%= number_to_currency(line_item.total_price) %></p>
     </div>
     <div class="line-description">
-      <%= link_to 'Quitar Articulo', line_item, method: :delete, data: { confirm: "Are you sure? " }  %>
+      <%= link_to 'Quitar Articulo', line_item, method: :delete, data: { confirm: "Estas seguro?" }  %>
     </div>
   </div>
 </div>
