--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -12,17 +12,16 @@
       <h2><strong>Fecha: </strong><%= order.created_at.in_time_zone("Buenos Aires").strftime('%d/%m/%Y %H:%M') %></h2>
       <h2><strong>Precio: </strong>$<%= order.amount %></h2>
     </div>
+    <div>
+      <h2><strong>Numero de orden: </strong> <%= order.id %> </h2>
+    </div>
     <div class="d-md-flex justify-content-between align-items-center">
-      <h2><strong>Nombre: </strong>nombre del usuario</h2>
+      <h2><strong>Nombre: </strong><%= order&.shipping&.full_name %> </h2>
       <h2><strong>Email: </strong><%= order.user.email %></h2>
     </div>
-
     <div class="d-md-flex justify-content-between align-items-center">
-      <h2><strong>Teléfono: </strong>telefono del usuario</h2>
-      <h2><strong>Direccción: </strong>direccion del usuario </h2>
-    </div>
-    <div class="d-md-flex justify-content-between align-items-center">
-      <h2><strong>Ciudad: </strong>ciudad del usuario </h2>
+      <h2><strong>Teléfono: </strong><%= order&.shipping&.full_number %></h2>
+      <h2><strong>Direccción: </strong><%= order&.shipping&.address %> </h2>
     </div>
     <% order.cart.line_items.each do |line_item| %>
     <div class="order-index-footer">
